update get letzteZaehlung to getLetzteAktiveZaehlung update LetzteAktiveZaehlung if zaehlungen changed